# c-_test

add/: CMakeLists.txt  add.cpp  array.cpp  char.cpp  cin.cpp  class.cpp  index.cpp  random.cpp  test.cpp
cout/: CMakeLists.txt  const.cpp  cout.cpp  for.cpp  function.cpp  if.cpp
