cmake_minimum_required(VERSION 2.8)
project(two_ints_add)
add_executable(add add.cpp)
add_executable(array array.cpp)
add_executable(cin cin.cpp)
add_executable(class class.cpp)
add_executable(char char.cpp)
add_executable(index index.cpp)
add_executable(random random.cpp)
add_executable(test test.cpp)
